nav transitions in all buget forms -- also fixed other layout issues

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,9 @@ body{
     overflow: auto;
     font-family: 'Lato', sans-serif !important;
 }
+#budget-wrapper{
+    margin-top: 6em;
+}
 #home-wrapper{
     overflow: auto;
 }
